--- a/server/package.json
+++ b/server/package.json
@@ -12,6 +12,7 @@
   "description": "",
   "type": "module",
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "express": "^4.21.1",
     "mysql": "^2.18.1"
   },
@@ -20,5 +21,24 @@
     "chai-http": "^4.4.0",
     "mocha": "^10.2.0",
     "nyc": "^17.1.0"
+  },
+  "nyc": {
+    "include": [
+      "*.js",
+      "test/**/*.js"
+    ],
+    "exclude": [
+      "node_modules"
+    ],
+    "reporter": [
+      "text",
+      "html"
+    ],
+    "all": true,
+    "check-coverage": true,
+    "lines": 80,
+    "statements": 80,
+    "functions": 80,
+    "branches": 80
   }
 }
