--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,7 @@
   "main": "app.js",
   "scripts": {
     "test": "mocha",
-    "coverage": "nyc npm test"
+    "coverage": "nyc mocha --recursive test/**/*.js"
   },
   "keywords": [],
   "author": "",
@@ -12,9 +12,9 @@
   "description": "",
   "type": "module",
   "dependencies": {
-    "bcrypt": "^5.1.1",
     "express": "^4.21.1",
-    "mysql": "^2.18.1"
+    "mysql": "^2.18.1",
+    "bcrypt": "^5.0.1"
   },
   "devDependencies": {
     "chai": "^5.1.1",
@@ -24,21 +24,20 @@
   },
   "nyc": {
     "include": [
-      "*.js",
+      "app.js",
       "test/**/*.js"
     ],
     "exclude": [
       "node_modules"
     ],
-    "reporter": [
-      "text",
-      "html"
-    ],
+    "reporter": ["text", "html"],
     "all": true,
     "check-coverage": true,
     "lines": 80,
     "statements": 80,
     "functions": 80,
-    "branches": 80
+    "branches": 80,
+    "sourceMap": false,
+    "instrument": true
   }
 }
