--- a/server/package.json
+++ b/server/package.json
@@ -3,8 +3,8 @@
   "version": "1.0.0",
   "main": "app.js",
   "scripts": {
-    "test": "mocha",
-    "coverage": "nyc mocha --recursive test/**/*.js"
+    "test": "nyc mocha --timeout 10000",
+    "coverage": "nyc mocha --recursive test/**/*.js" 
   },
   "keywords": [],
   "author": "",
@@ -12,15 +12,16 @@
   "description": "",
   "type": "module",
   "dependencies": {
+    "bcrypt": "^5.0.1",
     "express": "^4.21.1",
-    "mysql": "^2.18.1",
-    "bcrypt": "^5.0.1"
+    "mysql": "^2.18.1"
   },
   "devDependencies": {
-    "chai": "^5.1.1",
+    "chai": "^5.1.2",
     "chai-http": "^4.4.0",
-    "mocha": "^10.2.0",
-    "nyc": "^17.1.0"
+    "mocha": "^10.8.2",
+    "nyc": "^17.1.0",
+    "sinon": "^19.0.2"
   },
   "nyc": {
     "include": [
@@ -30,7 +31,10 @@
     "exclude": [
       "node_modules"
     ],
-    "reporter": ["text", "html"],
+    "reporter": [
+      "text",
+      "html"
+    ],
     "all": true,
     "check-coverage": true,
     "lines": 80,
