--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,7 @@
   "main": "app.js",
   "scripts": {
     "test": "nyc mocha --timeout 10000",
-    "coverage": "nyc mocha --recursive test/**/*.js" 
+    "coverage": "nyc mocha --recursive test/**/*.js"
   },
   "keywords": [],
   "author": "",
@@ -12,9 +12,13 @@
   "description": "",
   "type": "module",
   "dependencies": {
-    "bcrypt": "^5.0.1",
+    "bcrypt": "^5.1.1",
+    "cors": "^2.8.5",
     "express": "^4.21.1",
-    "mysql": "^2.18.1"
+    "jsonwebtoken": "^9.0.2",
+    "mysql": "^2.18.1",
+    "mysql2": "^3.11.4",
+    "path": "^0.12.7"
   },
   "devDependencies": {
     "chai": "^5.1.2",
