--- a/server/package.json
+++ b/server/package.json
@@ -12,19 +12,20 @@
   "description": "",
   "type": "module",
   "dependencies": {
-    "bcrypt": "^5.1.1",
-    "cors": "^2.8.5",
-    "express": "^4.21.1",
-    "jsonwebtoken": "^9.0.2",
-    "mysql": "^2.18.1",
-    "mysql2": "^3.11.4",
-    "path": "^0.12.7"
+    "mysql2": "^3.11.4"
   },
   "devDependencies": {
+    "bcrypt": "^5.1.1",
     "chai": "^5.1.2",
     "chai-http": "^4.4.0",
+    "cors": "^2.8.5",
+    "express": "^4.21.1",
+    "file-url-to-path": "^1.0.0",
+    "jsonwebtoken": "^9.0.2",
     "mocha": "^10.8.2",
+    "mysql": "^2.18.1",
     "nyc": "^17.1.0",
+    "path": "^0.12.7",
     "sinon": "^19.0.2"
   },
   "nyc": {
