--- a/server/package.json
+++ b/server/package.json
@@ -14,11 +14,13 @@
   "dependencies": {
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
+    "csv-writer": "^1.6.0",
     "express": "^4.21.1",
     "jsonwebtoken": "^9.0.2",
     "mysql": "^2.18.1",
     "mysql2": "^3.11.4",
-    "path": "^0.12.7"
+    "path": "^0.12.7",
+    "pdfkit": "^0.15.1"
   },
   "devDependencies": {
     "chai": "^5.1.2",
